# MLOps---Talleres

./: README.md  test.txt
.github/workflow/: github-actions.yml
.github/workflows/: github-actions.yml
diabetes-proyecto-3/: README.md  docker-compose.yml  docker-compose_api.yml
diabetes-proyecto-3/airflow/: requirements.txt
diabetes-proyecto-3/api/: Dockerfile  main.py  pyproject.toml
diabetes-proyecto-3/api/dto/: model_prediction_request.py  normalized_request.py
diabetes-proyecto-3/api/webApp/: gradio_predict_app.py
diabetes-proyecto-3/dags/: training.py
diabetes-proyecto-3/kompose/: mysql-db-service.yaml
diabetes-proyecto-3/locust/: docker-compose.yml  locustfile.py
diabetes-proyecto-3/models/: model_diabetes-model.pkl  model_diabetes-model.pkl.bak  preprocessor.pkl  preprocessor.pkl.bak
diabetes-proyecto-3/training_app/: DockerController.ipynb  dataController.py  db.py  etl.py  pyproject.toml  train.py
penguins-taller-1/: Dockerfile  ModelService.py  README.md  Train.py  etl.py  model.pkl  model.py  models.py  read_write_model_example.py  requirements.txt  server.py
penguins-taller-2/: README.md  docker-compose.yml
penguins-taller-2/api/: main.py  (+3 more)
penguins-taller-3-airflow/: README.md  docker-compose-airflow.yaml  docker-compose.yml
penguins-taller-4-mlflow/: README.md  docker-compose.yaml
proyecto-2/: docker-compose.yml
proyecto-4-property-market/: README.md  app-mlops-market.yaml  docker-compose.yml  docker-compose_api.yml
proyecto_2/: README.md  docker-compose.yml  docker-compose.yml.bk
taller-5-locust/: .gitignore  README.md
(+95 files in other folders)
