[project]
name = "training-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.6",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "mysql-connector-python"
]
